fix layout skills align right, bg image less kb

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -162,7 +162,7 @@ table.table-legend{
 				justify-content: center;
 			}
 			&:nth-child(3){
-				text-align: right;
+				justify-content: flex-end;
 			}
 		}
 	}
